Bumped the base font-size, and adjusted the spaxing acording to the new size to stop the page bloating too much.

--- a/src/stylesheets/modules/custom-bootstrap.less
+++ b/src/stylesheets/modules/custom-bootstrap.less
@@ -20,6 +20,8 @@
 // Assign the themes fonts.
 @font-family-sans-serif: 			"Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
 @font-weight-base: 					300;
+// Bump the font-size.
+@font-size-base:          			16px;
 
 // Iconography
 
